<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignInActivity">


    <TextView
        android:id="@+id/textView2"
        style="@style/textView_style"
        android:layout_marginTop="128dp"

        android:text="@string/stng_sign_in_m1"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView3"
        style="@style/textView_style"
        android:layout_width="300dp"


        android:layout_marginTop="16dp"
        android:text="@string/stng_sign_in_m2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <EditText
            android:id="@+id/etEmail"
            style="@style/edit_text_style"
            android:layout_marginBottom="10dp"
            android:hint="@string/stng_sign_in_m3" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/edit_text_style"
            android:inputType="textPassword"
            android:hint="@string/stng_sign_in_m4" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonSesion"
        style="@style/button_style"

        android:layout_marginTop="36dp"
        android:text="@string/stng_sign_in_m5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textView_style"
        android:layout_marginTop="24dp"
        android:text="@string/stng_sign_in_m6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSesion" />


    <TextView
        style="@style/textView_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/stng_sign_in_m0"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toEndOf="@+id/btn_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registrate"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/stng_sign_in_m7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="199dp" />

    <ImageButton
        android:id="@+id/btn_arrow"
        style="@style/button_style"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>